2012-03-29  Moritz Bunkus  <moritz@bunkus.org>

	* documentation: enhancement: mkvmerge's man page has been updated
	with a list of valid XML tags for the chapters, tags and segment
	info XML file formats.

	* all: Updated the DTD files with the newly supported elements.

	* mkvmerge: enhancement: Chapter XML files: mkvmerge can handle
	the "ChapterSegmentEditionUID" element.

	* mkvmerge: enhancement: Segment info XML files: mkvmerge can
	handle the "SegmentFilename", "PreviousSegmentFilename" and
	"NextSegmentFilename" elements.

2012-03-19  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: enhancement: Added "mts" as yet another file extension for
	MPEG transport streams.

2012-03-18  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: Fixed a crash due to a missing argument for a
	format string when clicking on the "Browse" button for the
	track-specific tags.

2012-03-15  Moritz Bunkus  <moritz@bunkus.org>

	* mmg, mkvinfo's GUI, all .exes: enhancement: Added new icons
	by Eduard Geier. (see AUTHORS).

2012-03-14  Moritz Bunkus  <moritz@bunkus.org>

	* mkvextract: bug fix: mkvextract sometimes wrote undefined values
	to a single reserved header field when extracting into AVI
	files. Patch by buguser128k. Fix for ticket 727.

	* mkvmerge: bug fix: AVC/h.264 mkvmerge was wrongfully writing a
	default duration of 60 frames/fields even if the source was
	signalling 60000/1001 frames/fields. The frame timecodes have been
	correct already.

2012-03-12  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed timecode calculation for (E)AC3 tracks
	if the source container (e.g. MPEG transport streams) only
	provided timecodes for some of the (E)AC3 packets itself.

2012-03-10  Moritz Bunkus  <moritz@bunkus.org>

	* Released v5.4.0.

2012-03-08  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed wrong calculation of the maximum number
	of ns per cluster in certain fringe cases if timecode scale was