@@ -26,7 +26,6 @@ enum file_type_e {
   FILE_TYPE_AVI,
   FILE_TYPE_CDXA,
   FILE_TYPE_CHAPTERS,
-  FILE_TYPE_COREPICTURE,
   FILE_TYPE_DIRAC,
   FILE_TYPE_DTS,
   FILE_TYPE_DV,
